--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,12 @@
 	<groupId>com</groupId>
 	<artifactId>tasks-api-tests</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+	</properties>
 
 	<dependencies>
 		<dependency>
